[gd_scene load_steps=6 format=3 uid="uid://6esvaxm240mf"]

[ext_resource type="Texture2D" uid="uid://cwvgyage1d5gb" path="res://Asset/Spritesheet/The Sidescroller's Dungeon Tiles 32x32.png" id="1_51vv5"]
[ext_resource type="Script" path="res://Object/door.gd" id="1_jdvgn"]
[ext_resource type="Script" path="res://HUD/prompt_action.gd" id="3_nbrg5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o5bag"]
atlas = ExtResource("1_51vv5")
region = Rect2(256, 368, 64, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6766f"]
size = Vector2(61, 87)

[node name="Door" type="Node2D"]
script = ExtResource("1_jdvgn")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_o5bag")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_6766f")

[node name="promptAction" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -33.0
offset_right = 780.0
offset_bottom = 104.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
script = ExtResource("3_nbrg5")
promptAction = "Interact"
promptMessage = ": Interact"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
